--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,19 @@
 :root {
   /* spacing */
   --measure: 60ch;
+  --ratio: 1.5;
+  --s-3: calc(var(--s-2) / var(--ratio));
+  --s-2: calc(var(--s-1) / var(--ratio));
+  --s-1: calc(var(--s0) / var(--ratio));
+  --s0: 1rem;
+  --s1: calc(var(--s0) * var(--ratio));
+  --s2: calc(var(--s1) * var(--ratio));
+  --s3: calc(var(--s2) * var(--ratio));
+  --s4: calc(var(--s3) * var(--ratio));
+  /* Colours */
+  --accent: #e92438;
+  --soft: #f8efde;
+  --hard: #231f1e;
 }
 
 * {
@@ -19,7 +32,11 @@ header {
   padding: 0;
 }
 body {
-  margin: auto;
+  margin: var(--s3) auto;
+  background-color: var(--soft);
+  color: var(--hard);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 100%;
 }
 
 main * {
@@ -28,6 +45,16 @@ main * {
 
 section {
   border: 1px solid black;
+}
+
+footer {
+  text-align: center;
+}
+
+footer::before {
+  content: "\220e";
+  display: block;
+  padding-bottom: var(--s-1);
 }
 
 /* Composition */
